# oifits

./: .gitattributes  LICENSE.txt  VLTI-array.fits  changelog.txt  midiwave.npz  oifits.py  oifits.txt  oitools.py  pyproject.toml  readme.md  readme.txt  sample.py
contrib/: HD148478.fits  JMenu_to_oifits2.py  VLTI-array.fits  baseline_data.txt  cflux_to_oifits2.py  make_vlti_array.py  merged.fits  oitools.py  readme.md  sample.py
contrib/Horizons2025/: addnoise.py  basemodel.py  epoch00.fits  epoch01.fits  epoch02.fits  epoch03.fits  makeemptyoifits.py  merged.fits  readme.md
contrib/Horizons2025/output/: epoch00.fits  epoch01.fits  epoch02.fits  epoch03.fits  testdata.fits
